# hacks-ai-nationwide2024

./: .gitignore  README.md  catboost-baseline.ipynb  pyproject.toml
eda/: LDA.ipynb  README.md
ml/: README.md  build-catboost-dataset.py  build-catboost-test.py  build-embedder-dataset.py  catboost-optuna-age.ipynb  catboost-optuna-gender.ipynb  catboost-train-main.ipynb  utils.py
ml/notebooks/: catboost-baseline.ipynb  catboost-optuna-age.ipynb  catboost-optuna-gender.ipynb  catboost-test-main.ipynb  catboost-train-main.ipynb
st_app/: Onboarding.py  lda_visualization_bigram.html  lda_visualization_unigram.html  region_coordinates.json  requirements.txt  utilities.py
st_app/help/: age_feature.csv  gender_feature.csv  v2_stats_cont.csv  v2_stats_not_cont.csv
st_app/pages/: 1_Custom.py  2_Users.py  3_Devices_Browsers_Platfroms.py  4_Duration  5_Gender.py  6_Geography.py  7_ML.py  8_LDA.py
