[tool.poetry]
name = "hacks-ai-nationwide2024"
version = "0.1.0"
description = "Hackathon solution. Catboost classification."
authors = ["Andrey Kuznetsov, Alexander Goryachev, Sergey Senichev, Alla Diachkova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.3.0"
catboost = "1.2.7"
pandas = "2.0.3"
numpy = "1.24.3"
optuna = "4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
